--- a/templates/licenses/apache_2_0.jinja2
+++ b/templates/licenses/apache_2_0.jinja2
@@ -186,7 +186,7 @@
       same "printed page" as the copyright notice for easier
       identification within third-party archives.
 
-   Copyright 2025 [dvk-net](https://github.com/dvk-net)
+   Copyright {% if params.year=='now' %}{{ now.year }}{% else %}{{ params.year }}{% endif %} {{ params.owner }}
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
